--- a/app.json
+++ b/app.json
@@ -13,11 +13,9 @@
             "description": "Your telegram app id",
             "value": ""
         },
-        "GOOGLE_CHROME_BIN": {
-            "value": "/app/.apt/usr/bin/google-chrome"
-        },
-        "CHROMEDRIVER_PATH": {
-            "value": "/app/.chromedriver/bin/chromedriver"
+        "USE_HEROKU": {
+            "description": "Do not change this. Else bot will crash!",
+            "value": "TRUE"
         }
     },
     "buildpacks": [
